--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "kaluma-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "kaluma flash ./led.ts --bundle --shell",
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "watch": "esbuild ./src/index.ts --bundle --watch --outfile=bundle.js",
+    "bundle": "esbuild ./src/index.ts --bundle --outfile=bundle.js",
+    "flash": "kaluma flash ./bundle.js --shell",
+    "start": "npm run bundle && npm run flash",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "esbuild": "^0.14.50",
     "typescript": "^4.7.4"
   }
 }
