--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "check": "tsc --noEmit",
-    "watch": "esbuild ./src/index.ts --bundle --watch --outfile=bundle.js",
-    "bundle": "esbuild ./src/index.ts --bundle --outfile=bundle.js",
-    "flash": "kaluma flash ./bundle.js --shell",
-    "start": "npm run bundle && npm run flash",
-    "build": "tsc"
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "start": "kaluma flash ./build/examples/basics/blink.js --bundle --shell"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "esbuild": "^0.14.50",
     "typescript": "^4.7.4"
   }
 }
